--- a/packages/marketing/public/index.html
+++ b/packages/marketing/public/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Marketing</title>
-    </head>
-    <body>
-        <div id="_marketing-dev-root"></div>
-    </body>
+<html>
+  <head></head>
+  <body>
+    <div id="_marketing-dev-root"></div>
+  </body>
 </html>
